@@ -1,3 +1,5 @@
+* Check that a contract clause is not empty
+
 Version 1.3 - 2015-01-22
 Version 1.2 - 2014-07-01
 * Changelog file creation
